# oh-my-experiments

./: .gitignore  CHANGELOG.md  LICENSE  README.md  ruff.toml
agents/: wiki-curator.md  (+3 more)
omx-core/: pyproject.toml
omx-core/omx_core/: __init__.py  atomic.py  campaign.py  cardcheck.py  clean.py  cli.py  clock.py  coverage.py  decision.py  doctor.py  evaluator.py  integrity.py  ledger.py  lock.py  loop.py  omx_paths.py  profile.py  proposal.py  report.py  revert.py  review.py  root.py  seal.py  state.py  tree.py  tree_audit.py  tree_ops.py
omx-core/omx_core/ingest/: __init__.py  base.py  csv_longform.py  eval_summary.py  stubs.py  tensorboard.py  wandb_offline.py
omx-core/omx_core/reduce/: __init__.py  cache.py  plot.py  promote.py  series.py  summarize.py  tb_final.py
omx-core/omx_core/reference/: __init__.py
omx-core/tests/: conftest.py  test_agent_manifest.py  test_atomic_vendored_sync.py  test_campaign.py  test_campaign_cli_liveness.py  test_campaign_drift.py  test_campaign_liveness.py  test_campaign_plan.py  test_capture_flush.py  test_card_check.py  test_clean.py  test_cli.py  test_cli_init.py  test_cli_plot.py  test_cli_promote.py  test_cli_tb_final.py  test_clock.py  test_clock_grep_guard.py  test_core_import_safe.py  test_coverage.py  test_decision.py  test_distribution_axiom.py  test_doctor.py  test_evaluator.py  test_fsync_durability.py  test_hook_backlog.py  test_hook_drift.py  test_hook_handlers_r3.py  test_hook_registration.py  test_hook_runner.py  test_ingest_base.py  test_ingest_bounds.py  test_ingest_csv_longform.py  test_ingest_eval_summary.py  test_ingest_stubs.py  test_ingest_tensorboard.py  test_ingest_wandb_offline.py  test_integrity.py  test_ledger.py  test_ledger_verbs.py  (+55 more)
(+67 files in other folders)
