[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "omx-core"
version = "0.1.0"
description = "OMX (oh-my-experiments) core: path single-source-of-truth and analysis primitives."
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["omx_core*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
